# bipay-wallet-android

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: litepal.xml
app/src/main/res/anim/: anim_exchange_detail_exchanging.xml  home_add_push_in.xml  home_add_push_out.xml
app/src/main/res/color/: font_index_pop_selector.xml
app/src/main/res/drawable/: bg_edittext.xml  (+88 more)
app/src/main/res/drawable-v21/: ripple_bg_item_popwidow_selector.xml  ripple_bg_lead_in_selector.xml  ripple_black.xml  ripple_btn_create_wallet_selector.xml  ripple_btn_option_no_corner_selector.xml  ripple_btn_option_recieve_selector.xml  ripple_btn_option_selector.xml  ripple_dark_blue.xml  ripple_dark_blue_corner.xml  ripple_item_help.xml  ripple_item_link_main_selector.xml  ripple_white_bottom_corner.xml  ripple_white_left_bottom_corner.xml  ripple_white_left_corner.xml  ripple_white_right_bottom_corner.xml  ripple_white_right_corner.xml  ripple_white_top_corner.xml
bipaysdk/: CMakeLists.txt  README.md  build.gradle
bipaysdk/src/androidTest/java/com/spark/bipaysdk/: ExampleInstrumentedTest.java
bipaysdk/src/main/: AndroidManifest.xml
bipaysdk/src/main/cpp/: native-lib.cpp
bipaysdk/src/main/cpp/include/: bipaydll.h
bipaysdk/src/main/java/com/spark/bipaysdk/jni/: JNIUtil.java
bipaysdk/src/main/res/values/: strings.xml
bipaysdk/src/test/java/com/spark/bipaysdk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
kchartlib/: build.gradle
lib-zxing/: build.gradle
release/: spark.jks
(+312 files in other folders)
